apps/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: apps
  labels:
    app.kubernetes.io/name: web
    app.kubernetes.io/part-of: nimbus
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: web
  ports:
    - name: http
      port: 80
      targetPort: http     # -> the container's named 'http' port
